2009-07-30  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widgets/color.jl: since we now got gtk-color-button-get-color-interp in rep-gtk, replace
	                                     Button + ColorPreview [deprecated] + ColorSelection Trio by single ColorButton

	* lisp/sawfish/gtk/color-preview.jl: obsolete because of the above widget-transistion

	* Makefile.in: add sawfish-ksm.desktop to uninstall rule

	* sawfish.spec.in: package sawfish-ksm.desktop

2009-07-29  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/mmc/window-manipulation.jl: moved maximize-unframe/reframe into sawfish.wm.state.maximize
	                                              moved rename-window into sawfish.wm.windows 

	* lisp/sawfish/wm/windows.jl: first change WM_NAME then _NET_WM_NAME in rename-window (so that we can grab
	                              the new window-name with sawfish-ui and display it in the titlebar (some panels,
				      eg. gnome-panel, don't accept the new name, though))

	* lisp/sawfish/wm/ext/match-window.jl: added window-name matcher

	* lisp/sawfish/gtk/stock.jl: remove make-url-widget function as we now got GtkLinkButton in rep-gtk

	* scripts/sawfish-about.jl.in: use GtkLinkButton instead of make-url-widget
	                               updated Johns Mail

2009-07-28  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/frames.jl: make doc-windows unframed [Timo Korvola]

	* lisp/sawfish/wm/windows.jl: set window-type to dock for panels [Timo Korvola]

	* configure.in: small fixup in x11r7 checks regarding SMlib and libICE

2009-07-27  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/viewport.jl: Added viewport-boundary-mode dynamic [Jeremy Hankins]

	* lisp/sawfish/wm/viewport.jl
	* lisp/sawfish/wm/ext/match-window.jl: added new-viewport window matcher and viewport-windows function [Jeremy Hankins]

2009-07-26  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tab.jl