@@ -1,3 +1,6 @@
+2009-08-05  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/windows.jl: make rename-window work again
+
 2009-07-30  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widgets/color.jl: since we now got gtk-color-button-get-color-interp in rep-gtk, replace
 	                                     Button + ColorPreview [deprecated] + ColorSelection Trio by single ColorButton
